--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
+# Application name
 spring.application.name=student-management
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+
+# MySQL datasource - use Kubernetes service name instead of localhost
+spring.datasource.url=jdbc:mysql://mysql-service:3306/springdb?createDatabaseIfNotExist=true
+
+# Database credentials from Secret
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+# JPA / Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Server configuration :
-server.port=8089
+# Server configuration
+server.port=8080
 server.servlet.context-path=/student
